--- a/Web-Buena-Surferos/style.css
+++ b/Web-Buena-Surferos/style.css
@@ -53,7 +53,7 @@
 		color: #000;
 	}
 	.banner{
-		background: url(images/bg.jpg) no-repeat center !important;
+		background: url(images/underwater.jpeg) no-repeat center !important;
 		background-size: cover !important;
 	}
 	.services h2:after{
