--- a/New Web/newsite no bs/styles.css
+++ b/New Web/newsite no bs/styles.css
@@ -25,7 +25,6 @@
   /* 60px - 100px top and bottom */
   --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
 
-
   --h1-font-size: 74px;
   --h2-font-size: 46px;
   --h3-font-size: 32px;
@@ -44,7 +43,7 @@
   --font-weight-normal: 400;
   --font-weight-bold: 700;
 
-  --body-font-family: 'Geist', sans-serif;
+  --body-font-family: "Geist", sans-serif;
 }
 
 body {
@@ -54,23 +53,23 @@ body {
   font-family: var(--body-font-family);
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   /* prevents padding from affecting height and width */
   box-sizing: border-box;
 }
 
-
 /*---------------------------------------
   TYPOGRAPHY               
 -----------------------------------------*/
-
 
 .cs-topper {
   font-size: var(--topperFontSize);
   line-height: 1.2em;
   text-transform: uppercase;
   text-align: inherit;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   font-weight: 700;
   color: var(--primary);
   margin-bottom: 0.25rem;
@@ -79,7 +78,7 @@ body {
 
 .cs-title {
   font-size: var(--headerFontSize);
-  font-family: 'Geist', sans-serif;
+  font-family: "Geist", sans-serif;
   font-weight: bold;
   line-height: 1.2em;
   text-align: inherit;
@@ -88,7 +87,6 @@ body {
   color: var(--headerColor);
   position: relative;
 }
-
 
 .cs-text {
   font-size: var(--bodyFontSize);
@@ -101,19 +99,17 @@ body {
 }
 
 @font-face {
-  font-family: 'Geist';
-  src: url('../fonts/GeistMono-Regular.woff2') format('woff2');
+  font-family: "Geist";
+  src: url("../fonts/GeistMono-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Geist';
-  src: url('../fonts/GeistMono-Bold.woff2') format('woff2');
+  font-family: "Geist";
+  src: url("../fonts/GeistMono-Bold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
 }
-
-
 
 /* Estilos del Navbar */
 .navbar {
@@ -166,18 +162,19 @@ body {
   height: auto;
   z-index: -1;
   object-fit: cover;
+  background-color: #000000;
 }
 
-.video-overlay {
+#video-wrapper {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(2, 2, 15, 0.349);
 }
 
-/* Estilos del CTA (Call to Action) */
+/* Estilos mejorados del CTA (Call to Action) */
 .cta {
   position: absolute;
   top: 50%;
@@ -188,17 +185,61 @@ body {
 }
 
 .cta h2 {
-  font-size: 2em;
-  margin-bottom: 20px;
+  font-size: 6.5em; /* Aumentamos el tamaño del texto */
+  margin-bottom: 30px; /* Mayor espacio inferior */
 }
 
-.cta button {
-  padding: 10px 20px;
-  font-size: 1.2em;
-  background-color: #ff5722;
-  border: none;
+.cs-button-6 {
+  text-align: center;
+  font-size: 1rem;
+  /* 46px - 56px */
+  line-height: clamp(2.875rem, 8vw, 3.5rem);
+  text-decoration: none;
+  font-weight: 700;
+  min-width: 10.875rem;
+  margin: auto;
+  color: #1a1a1a;
+  padding: 0 1.5rem;
+  /* prevents padding and border from affecting height and width */
+  box-sizing: border-box;
+  background-color: #fff;
+  border: 2px solid #1a1a1a;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+  position: relative;
+  z-index: 1;
+  transition: color 0.3s;
+}
+.cs-button-6:before {
+  content: "";
+  width: 0.375rem;
+  height: 100%;
+  background: #1a1a1a;
+  opacity: 1;
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  transition: width 0.3s;
+  z-index: -1;
+}
+.cs-button-6 .cs-icon {
+  width: 1.5rem;
+  height: auto;
+}
+.cs-button-6 .cs-icon path {
+  transition: fill 0.3s;
+}
+.cs-button-6:hover {
   color: #fff;
-  cursor: pointer;
+}
+.cs-button-6:hover:before {
+  width: 100%;
+}
+.cs-button-6:hover .cs-icon path {
+  fill: #fff;
 }
 
 /* Estilos de la sección de información */
