--- a/New Web/newsite no bs/speakers.css
+++ b/New Web/newsite no bs/speakers.css
@@ -1,119 +1,141 @@
-body {
-  background-color: #2c3a47;
-  color: #fff;
-  font-family: "Montserrat";
-}
-
-.container-speaker {
-  height: 100vh;
-  display: flex;
-}
-
-.person-card {
-  display: flex;
-  position: relative;
-  margin: auto;
-  width: 45rem;
-  border-radius: 5px;
-  background-color: darken(#2c3a47, 10%);
-  transition: all 0.4s;
-
-  &:hover {
-    cursor: pointer;
-    transform: translateY(-10px);
-    box-shadow: 15px 15px 5px #111;
-  }
-
-  .person-card-photo {
-    box-sizing: border-box;
-    border: 0px solid #182028;
-    padding: 0;
-    overflow: hidden;
-    height: 25rem;
-    width: 18.75rem;
-    margin: -10rem 0 3rem 3rem;
-    transition: all 0.4s;
-
-    & > img {
-      height: 25rem;
-      position: relative;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-
-  .person-card-info {
-    padding: 2rem 3rem;
-
-    & > h2 {
-      font-size: 2rem;
-    }
-
-    & > p {
-      opacity: 0.7;
-    }
-  }
-}
-
-.artists-section {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  padding: 2em;
-}
-
-.card {
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.card-content {
-  position: relative;
-}
-
-.card-image {
+.speakers-section {
+  min-height: 100vh;
   width: 100%;
-  height: auto;
-  transition: transform 0.3s ease;
+  font-size: 16px;
+  background: #eee;
+  color: #777;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.item-container {
+  position: relative;
+  margin: 24px;
+  width: 320px;
+  height: 570px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.img-container,
+.body-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.img-container img {
+  width: 100%;
+}
+
+.body-container {
+  position: relative;
 }
 
 .overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-  transform: translateY(100%);
-  transition: transform 0.3s ease;
+  height: 400px;
+  background-color: rgba(24, 83, 122, 0.6);
+  opacity: 0;
+  transition: height linear 0.4s, opacity linear 0.2s;
 }
 
-.card:hover .overlay {
-  transform: translateY(0%);
+.item-container:hover .overlay {
+  opacity: 1;
+  height: 150px;
 }
 
-.card-title {
-  margin: 0;
-  font-size: 18px;
+.event-info {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
+
+.title,
+.price {
+  color: #18537a;
+  font-size: 1.5em;
   font-weight: bold;
+  letter-spacing: 1px;
+  margin: 12px;
 }
 
-.card-description {
-  margin: 10px 0 0;
-  font-size: 14px;
+.info {
+  letter-spacing: 0.5px;
+  margin-bottom: 6px;
 }
 
-@media screen and (min-width: 768px) {
-  .artists-section {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.separator {
+  width: 20%;
+  height: 6px;
+  background-color: #17537a;
+  margin-bottom: 16px;
 }
 
-@media screen and (min-width: 1024px) {
-  .artists-section {
-    grid-template-columns: repeat(4, 1fr);
-  }
+.additional-info {
+  border-top: 1px solid #bbb;
+  margin-top: 12px;
+  padding: 28px;
+  padding-bottom: 0;
+}
+
+.additional-info .info {
+  font-size: 0.9em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.info i {
+  color: #18537a;
+  font-size: 1.1em;
+  margin-right: 4px;
+}
+
+.info span {
+  color: #18537a;
+  font-weight: bolder;
+}
+
+.action {
+  color: #fff;
+  border: 3px solid #fff;
+  background-color: transparent;
+  position: absolute;
+  top: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  outline: none;
+  cursor: pointer;
+  padding: 12px;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  font-weight: bold;
+  letter-spacing: 2px;
+  transition: background-color 0.4s, top 0.4s;
+}
+
+.item-container:hover .action {
+  top: 50px;
+}
+
+.action:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
