--- a/New Web/newsite no bs/styles.css
+++ b/New Web/newsite no bs/styles.css
@@ -171,7 +171,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(2, 2, 15, 0.349);
+  background-color: rgba(14, 14, 22, 0.568);
+  z-index: -1;
 }
 
 /* Estilos mejorados del CTA (Call to Action) */
