--- a/New Web/newsite no bs/about.css
+++ b/New Web/newsite no bs/about.css
@@ -212,7 +212,7 @@
       content: "";
       width: 0%;
       height: 100%;
-      background: #000;
+      background: #ba0025ff;
       opacity: 1;
       /* add a border radius below this to round corners */
       position: absolute;
