--- a/New Web/newsite no bs/pricing.css
+++ b/New Web/newsite no bs/pricing.css
@@ -221,7 +221,7 @@
     position: absolute;
     height: 100%;
     width: 0%;
-    background: #000;
+    background: #ba0025ff;
     opacity: 1;
     top: 0;
     left: 0;
