--- a/New Web/newsite no bs/styles.css
+++ b/New Web/newsite no bs/styles.css
@@ -190,58 +190,6 @@ body {
   margin-bottom: 30px; /* Mayor espacio inferior */
 }
 
-.cs-button-6 {
-  text-align: center;
-  font-size: 1rem;
-  /* 46px - 56px */
-  line-height: clamp(2.875rem, 8vw, 3.5rem);
-  text-decoration: none;
-  font-weight: 700;
-  min-width: 10.875rem;
-  margin: auto;
-  color: #1a1a1a;
-  padding: 0 1.5rem;
-  /* prevents padding and border from affecting height and width */
-  box-sizing: border-box;
-  background-color: #fff;
-  border: 2px solid #1a1a1a;
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1.5rem;
-  position: relative;
-  z-index: 1;
-  transition: color 0.3s;
-}
-.cs-button-6:before {
-  content: "";
-  width: 0.375rem;
-  height: 100%;
-  background: #1a1a1a;
-  opacity: 1;
-  position: absolute;
-  display: block;
-  bottom: 0;
-  left: 0;
-  transition: width 0.3s;
-  z-index: -1;
-}
-.cs-button-6 .cs-icon {
-  width: 1.5rem;
-  height: auto;
-}
-.cs-button-6 .cs-icon path {
-  transition: fill 0.3s;
-}
-.cs-button-6:hover {
-  color: #fff;
-}
-.cs-button-6:hover:before {
-  width: 100%;
-}
-.cs-button-6:hover .cs-icon path {
-  fill: #fff;
-}
 
 /* Estilos de la sección de información */
 .info-section {
@@ -727,4 +675,20 @@ img {
 .copyright-text {
   color: #ccc;
   margin-bottom: 0;
+}
+
+.countdown {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 1.5em;
+}
+
+#timer {
+  font-size: 3rem;
+  color: #ffffff;
+  padding: 20px;
 }
