--- a/final-web/styles.css
+++ b/final-web/styles.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 header {
   position: absolute;
   top: 0;
@@ -16,6 +18,7 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+
 header .logo {
   color: #fff;
   text-transform: uppercase;
@@ -37,6 +40,7 @@ header .logo {
     transition: 0.5s;
     z-index: 2;
   }
+
   .showcase.active {
     right: 300px;
   }
@@ -50,6 +54,7 @@ header .logo {
     object-fit: cover;
     opacity: 0.8;
   }
+
   .overlay {
     position: absolute;
     top: 0;
@@ -59,6 +64,7 @@ header .logo {
     background: #334c587e;
     mix-blend-mode: overlay;
   }
+
   .text {
     position: relative;
     z-index: 10;
@@ -71,6 +77,7 @@ header .logo {
     line-height: 1em;
     text-transform: uppercase;
   }
+
   .text h3 {
     font-size: 4em;
     font-weight: 700;
@@ -78,6 +85,7 @@ header .logo {
     line-height: 1em;
     text-transform: uppercase;
   }
+
   .text p {
     font-size: 1.1em;
     color: #fff;
@@ -85,6 +93,7 @@ header .logo {
     font-weight: 400;
     max-width: 700px;
   }
+
   .text a {
     display: inline-block;
     font-size: 1em;
@@ -94,24 +103,121 @@ header .logo {
     text-decoration: none;
     font-weight: 500;
     margin-top: 10px;
-    color: #111;
+    border-radius: 10px;
     letter-spacing: 2px;
+    color: #111;
     transition: 0.2s;
   }
+
   .text a:hover {
-    letter-spacing: 6px;
+    background: #a5a5a5;
+    color: #0e3755ff;
   }
 
   @media (max-width: 991px) {
+
     .showcase,
     .showcase header {
       padding: 40px;
     }
+
     .text h2 {
       font-size: 3em;
     }
+
     .text h3 {
       font-size: 2em;
     }
+  }
+}
+
+
+/* Cartas */
+#cards {
+  img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
+  }
+
+  .btn {
+    color: #ffffff;
+    padding: 0.8rem;
+    font-size: 14px;
+    text-transform: uppercase;
+    border-radius: 4px;
+    font-weight: 400;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    background: transparent;
+  }
+
+  .btn:hover {
+    background-color: rgba(255, 255, 255, 0.12);
+  }
+
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .cards_item {
+    display: flex;
+    padding: 1rem;
+  }
+
+  @media (min-width: 40rem) {
+    .cards_item {
+      width: 50%;
+    }
+  }
+
+  @media (min-width: 56rem) {
+    .cards_item {
+      width: 33.3333%;
+    }
+  }
+
+  .card {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+
+  .card_content {
+    padding: 1rem;
+    background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+  }
+
+  .card_title {
+    color: #ffffff;
+    font-size: 1.1rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    margin: 0px;
+  }
+
+  .card_text {
+    color: #ffffff;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    margin-bottom: 1.25rem;
+    font-weight: 400;
+  }
+
+  .made_by {
+    font-weight: 400;
+    font-size: 13px;
+    margin-top: 35px;
+    text-align: center;
   }
 }
