--- a/final-web/styles.css
+++ b/final-web/styles.css
@@ -30,7 +30,6 @@ header {
     align-items: center;
     background: #111;
     transition: 0.5s;
-    z-index: 2;
   }
   .showcase.active {
     right: 300px;
@@ -43,7 +42,6 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.8;
   }
   .overlay {
     position: absolute;
@@ -51,7 +49,7 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #334c587e;
+    background: #3354587e;
     mix-blend-mode: overlay;
   }
   .text {
@@ -138,7 +136,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 0 20px; 
+    padding: 0 20px;
   }
 
   .logo {
@@ -171,11 +169,11 @@ header {
   }
 
   .nav-menu li a:hover {
-    color: #ffcc00; 
+    color: #ffcc00;
   }
 
   /* Media query para dispositivos móviles */
-@media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     .navbar {
       width: auto;
       right: 20px; /* Ajusta la posición para evitar solapamiento */
@@ -187,5 +185,125 @@ header {
       top: 20px;
       left: 40px;
     }
+  }
 }
+
+.timetable {
+  body {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    line-height: 1.42em;
+    color: #a7a1ae;
+    background-color: #1f2739;
+  }
+
+  h1 {
+    font-size: 3em;
+    font-weight: 300;
+    line-height: 1em;
+    text-align: center;
+    color: #4dc3fa;
+  }
+
+  h2 {
+    font-size: 1em;
+    font-weight: 300;
+    text-align: center;
+    display: block;
+    line-height: 1em;
+    padding-bottom: 2em;
+    color: #fb667a;
+  }
+
+  h2 a {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fb667a;
+    text-decoration: none;
+  }
+
+  .blue {
+    color: #185875;
+  }
+  .yellow {
+    color: #fff842;
+  }
+
+  .container th h1 {
+    font-weight: bold;
+    font-size: 1em;
+    text-align: left;
+    color: #185875;
+  }
+
+  .container td {
+    font-weight: normal;
+    font-size: 1em;
+    -webkit-box-shadow: 0 2px 2px -2px #0e1119;
+    -moz-box-shadow: 0 2px 2px -2px #0e1119;
+    box-shadow: 0 2px 2px -2px #0e1119;
+  }
+
+  .container {
+    text-align: left;
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+    display: table;
+    padding: 0 0 8em 0;
+  }
+
+  .container td,
+  .container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+  }
+
+  /* Background-color of the odd rows */
+  .container tr:nth-child(odd) {
+    background-color: #323c50;
+  }
+
+  /* Background-color of the even rows */
+  .container tr:nth-child(even) {
+    background-color: #2c3446;
+  }
+
+  .container th {
+    background-color: #1f2739;
+  }
+
+  .container td:first-child {
+    color: #fb667a;
+  }
+
+  .container tr:hover {
+    background-color: #464a52;
+    -webkit-box-shadow: 0 6px 6px -6px #0e1119;
+    -moz-box-shadow: 0 6px 6px -6px #0e1119;
+    box-shadow: 0 6px 6px -6px #0e1119;
+  }
+
+  .container td:hover {
+    background-color: #fff842;
+    color: #403e10;
+    font-weight: bold;
+
+    box-shadow: #7f7c21 -1px 1px, #7f7c21 -2px 2px, #7f7c21 -3px 3px,
+      #7f7c21 -4px 4px, #7f7c21 -5px 5px, #7f7c21 -6px 6px;
+    transform: translate3d(6px, -6px, 0);
+
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+    transition-timing-function: line;
+  }
+
+  @media (max-width: 800px) {
+    .container td:nth-child(4),
+    .container th:nth-child(4) {
+      display: none;
+    }
+  }
 }
