--- a/final-web/styles.css
+++ b/final-web/styles.css
@@ -17,6 +17,90 @@ header {
   align-items: center;
 }
 
+/* Navbar styles */
+.logo {
+  font-size: 1.5em;
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  position: fixed;
+  top: 60px;
+  left: 60px;
+
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+}
+.navbar {
+  position: fixed;
+  top: 30px;
+  right: 150px;
+  width: 300px;
+  height: 100%;
+  padding: 40px;
+  transition: 0.5s;
+
+  color: #fff;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0 20px;
+}
+
+.logo {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+.nav-menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-menu li {
+  margin-left: 20px;
+}
+
+.nav-menu li:first-child {
+  margin-left: 0;
+}
+
+.nav-menu li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
+  transition: color 0.3s;
+}
+
+.nav-menu li a:hover {
+  color: #ffcc00;
+}
+
+/* Media query para dispositivos móviles */
+@media screen and (max-width: 768px) {
+  .navbar {
+    width: auto;
+    right: 20px; /* Ajusta la posición para evitar solapamiento */
+    padding: 20px;
+    top: 50px;
+    left: 0px;
+  }
+  .logo {
+    top: 20px;
+    left: 40px;
+  }
+}
+
 /* Landing section styles */
 #landing-section {
   .showcase {
@@ -56,7 +140,7 @@ header {
     position: relative;
     z-index: 10;
 
-    h2{
+    h2 {
       font-size: 5em;
       font-weight: 800;
       color: #fff;
@@ -113,89 +197,6 @@ header {
     }
     .text h3 {
       font-size: 2em;
-    }
-  }
-  /* Navbar styles */
-  .logo {
-    font-size: 1.5em;
-    font-weight: 700;
-    text-decoration: none;
-    color: #fff;
-    position: fixed;
-    top: 60px;
-    left: 60px;
-
-    a{
-      color: #fff;
-      text-decoration: none;
-    }
-  }
-  .navbar {
-    position: fixed;
-    top: 30px;
-    right: 150px;
-    width: 300px;
-    height: 100%;
-    padding: 40px;
-    transition: 0.5s;
-
-    color: #fff;
-  }
-
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding: 0 20px;
-  }
-
-  .logo {
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 1.5rem;
-    color: #fff;
-  }
-
-  .nav-menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-
-  .nav-menu li {
-    margin-left: 20px;
-  }
-
-  .nav-menu li:first-child {
-    margin-left: 0;
-  }
-
-  .nav-menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1rem;
-    transition: color 0.3s;
-  }
-
-  .nav-menu li a:hover {
-    color: #ffcc00;
-  }
-
-  /* Media query para dispositivos móviles */
-  @media screen and (max-width: 768px) {
-    .navbar {
-      width: auto;
-      right: 20px; /* Ajusta la posición para evitar solapamiento */
-      padding: 20px;
-      top: 50px;
-      left: 0px;
-    }
-    .logo {
-      top: 20px;
-      left: 40px;
     }
   }
 }
@@ -318,4 +319,246 @@ header {
       display: none;
     }
   }
+}
+
+/* About Section styles */
+
+#about-section {
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+img {
+max-width: 100%;
+height: auto;
+}
+section {
+    padding: 60px 0;
+   /* min-height: 100vh;*/
+}
+
+.sec-title{
+position:relative;
+z-index: 1;
+margin-bottom:60px;
+}
+
+.sec-title .title{
+position: relative;
+display: block;
+font-size: 18px;
+line-height: 24px;
+color: #ff2222;
+font-weight: 500;
+margin-bottom: 15px;
+}
+
+.sec-title h2{
+position: relative;
+display: block;
+font-size:40px;
+line-height: 1.28em;
+color: #222222;
+font-weight: 600;
+padding-bottom:18px;
+}
+
+.sec-title h2:before{
+position:absolute;
+content:'';
+left:0px;
+bottom:0px;
+width:50px;
+height:3px;
+background-color:#d1d2d6;
+}
+
+.sec-title .text{
+position: relative;
+font-size: 16px;
+line-height: 26px;
+color: #848484;
+font-weight: 400;
+margin-top: 35px;
+}
+
+.sec-title.light h2{
+color: #ffffff;
+}
+
+.sec-title.text-center h2:before{
+left:50%;
+margin-left: -25px;
+}
+
+.list-style-one{
+position:relative;
+}
+
+.list-style-one li{
+position:relative;
+font-size:16px;
+line-height:26px;
+color: #222222;
+font-weight:400;
+padding-left:35px;
+margin-bottom: 12px;
+}
+
+.list-style-one li:before {
+content: "\f058";
+position: absolute;
+left: 0;
+top: 0px;
+display: block;
+font-size: 18px;
+padding: 0px;
+color: #ff2222;
+font-weight: 600;
+-moz-font-smoothing: grayscale;
+-webkit-font-smoothing: antialiased;
+font-style: normal;
+font-variant: normal;
+text-rendering: auto;
+line-height: 1.6;
+font-family: "Font Awesome 5 Free";
+}
+
+.list-style-one li a:hover{
+color: #44bce2;
+}
+
+.btn-style-one{
+position: relative;
+display: inline-block;
+font-size: 17px;
+line-height: 30px;
+color: #ffffff;
+padding: 10px 30px;
+font-weight: 600;
+overflow: hidden;
+letter-spacing: 0.02em;
+background-color: #ff2222;
+}
+
+.btn-style-one:hover{
+background-color: #001e57;
+color: #ffffff;
+}
+.about-section{
+position: relative;
+padding: 120px 0 70px;
+}
+
+.about-section .sec-title{
+margin-bottom: 45px;
+}
+
+.about-section .content-column{
+position: relative;
+margin-bottom: 50px;
+}
+
+.about-section .content-column .inner-column{
+position: relative;
+padding-left: 30px;
+}
+
+.about-section .text{
+margin-bottom: 40px;
+font-size: 16px;
+line-height: 26px;
+color: #848484;
+font-weight: 400;
+}
+
+.about-section .list-style-one{
+margin-bottom: 45px;
+}
+
+.about-section .btn-box{
+position: relative;
+}
+
+.about-section .btn-box a{
+padding: 15px 50px;
+}
+
+.about-section .image-column{
+position: relative;
+}
+
+.about-section .image-column .text-layer{
+position: absolute;
+right: -110px;
+top: 50%;
+font-size: 325px;
+line-height: 1em;
+color: #ffffff;
+margin-top: -175px;
+font-weight: 500;
+}
+
+.about-section .image-column .inner-column{
+position: relative;
+padding-left: 120px;
+padding-bottom: 125px;
+}
+
+.about-section .image-column .inner-column:before{
+position: absolute;
+left: -75px;
+top: 65px;
+height: 520px;
+width: 520px;
+background-image:url(https://i.ibb.co/fxJ1jtC/about-circle-1.png);
+content: "";
+}
+
+.about-section .image-column .image-1{
+position: relative;
+}
+
+.about-section .image-column .image-2{
+position: absolute;
+left: 0;
+bottom: 0;
+}
+
+.about-section .image-column .image-2 img,
+.about-section .image-column .image-1 img{
+box-shadow: 0 30px 50px rgba(8,13,62,.15);
+}
+
+.about-section .image-column .video-link{
+position: absolute;
+left: 70px;
+top: 170px;
+}
+
+.about-section .image-column .video-link .link{
+position: relative;
+display: block;
+font-size: 22px;
+color: #191e34;
+font-weight: 400;
+text-align: center;
+height: 100px;
+width: 100px;
+line-height: 100px;
+background-color: #ffffff;
+border-radius: 50%;
+box-shadow: 0 30px 50px rgba(8,13,62,.15);
+-webkit-transition: all 300ms ease;
+-moz-transition: all 300ms ease;
+-ms-transition: all 300ms ease;
+-o-transition: all 300ms ease;
+transition: all 300ms ease;
+}
+
+.about-section .image-column .video-link .link:hover{
+background-color: #191e34;
+color: #ffffff;
+}
 }
